--- a/Management of Fashion and Luxury Companies _ Coursera.html
+++ b/Management of Fashion and Luxury Companies _ Coursera.html
@@ -53,6 +53,9 @@
           href="https://d3njjcbhbojbot.cloudfront.net/web/images/favicons/icon-blue-16x16.png" sizes="16x16">
     <link rel="icon" type="image/png"
           href="https://d3njjcbhbojbot.cloudfront.net/web/images/favicons/icon-blue-32x32.png" sizes="32x32">
+
+    <!-- font awesome -->
+    <link rel="stylesheet" href="Management of Fashion and Luxury Companies _ Coursera_files/css/font-awesome.min.css">
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="msapplication-TileImage"
           content="https://d3njjcbhbojbot.cloudfront.net/web/images/favicons/mstile-144x144.png">
@@ -6187,7 +6190,8 @@
                                                            data-reactid="48">
                                                       <span class="" data-reactid="49">
                                                          <!-- react-text: 50 -->جستجو
-                                                          <!-- /react-text --><i class="fa fa-chevron-down" aria-hidden="true"></i>
+                                                          <!-- /react-text --><i class="fa fa-chevron-down"
+                                                                                 aria-hidden="true"></i>
                                                       </span>
                                                    </button>
                                                    <div
