--- a/Management of Fashion and Luxury Companies _ Coursera.html
+++ b/Management of Fashion and Luxury Companies _ Coursera.html
@@ -9173,7 +9173,7 @@
                                                 <span
                                                         class="expertise-rating p-l-1" data-reactid="598">
                                                    <span
-                                                           data-reactid="599">Content Rating</span>
+                                                           data-reactid="599">امتیاز دهندگان</span>
                                                    <span
                                                            class="expertise-rating__img" data-reactid="600">
                                                       <svg
@@ -9196,23 +9196,8 @@
                                                        <!-- /react-text --><!-- react-text: 606 -->%
                                                        <!-- /react-text -->
                                                    </span>
-                                                   <span data-reactid="607">(17,494 ratings)</span>
+                                                   <span data-reactid="607">(17,494 امتیاز دادند)</span>
                                                 </span>
-                                                        <svg class="_ufjrdd"
-                                                             style="fill:#363B42;height:24px;width:18px;line-height:18;"
-                                                             viewBox="0 0 48 48" role="img"
-                                                             aria-labelledby="Infoef640889-fa72-4205-beb0-411bbbfe93f2 Infoef640889-fa72-4205-beb0-411bbbfe93f2Desc"
-                                                             xmlns="http://www.w3.org/2000/svg" data-reactid="608">
-                                                            <title id="Infoef640889-fa72-4205-beb0-411bbbfe93f2"
-                                                                   data-reactid="609">Info</title>
-                                                            <path d="M24,46 C11.869,46 2,36.131 2,24 C2,11.869 11.869,2 24,2 C36.131,2 46,11.869 46,24 C46,36.131 36.131,46 24,46 M24,0 C10.767,0 0,10.767 0,24 C0,37.233 10.767,48 24,48 C37.233,48 48,37.233 48,24 C48,10.767 37.233,0 24,0"
-                                                                  role="presentation" data-reactid="610"></path>
-                                                            <path d="M24,16 C25.105,16 26,15.104 26,14 C26,12.896 25.105,12 24,12 C22.895,12 22,12.896 22,14 C22,15.104 22.895,16 24,16"
-                                                                  role="presentation" data-reactid="611"></path>
-                                                            <polygon
-                                                                    points="25.4962 20.0093 20.4962 20.0093 20.4962 22.0093 23.4962 22.0093 23.4962 34.0093 20.4962 34.0093 20.4962 36.0093 28.4962 36.0093 28.4962 34.0093 25.4962 34.0093"
-                                                                    role="presentation" data-reactid="612"></polygon>
-                                                        </svg>
                                                     </div>
                                                 </div>
                                             </div>
@@ -9242,7 +9227,7 @@
                                                     <div class="hidden-sm-down m-t-1 m-b-2" data-reactid="626">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="627">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="628">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="628">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="629">
                                                                     <div class="_473mf9o"
@@ -9304,7 +9289,7 @@
                                                     <div class="hidden-sm-up m-t-1" data-reactid="643">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="644">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="645">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="645">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="646">
                                                                     <div class="_473mf9o"
@@ -9334,7 +9319,7 @@
                                                     </div>
                                                     <div class="_1qfi0x77 m-b-2" data-reactid="653">
                                                         <div class="_1qfi0x77 p-y-1" data-reactid="654">
-                                                            <div class="m-r-1" data-reactid="655">
+                                                            <div class="m-l-1" data-reactid="655">
                                                                 <div class="_u2c01j" style="border-radius:50%;"
                                                                      data-reactid="656">
                                                                     <div class="_473mf9o"
@@ -9361,11 +9346,12 @@
                                                       <span data-reactid="662">
                                                          <span
                                                                  data-reactid="663">
-                                                            <!-- react-text: 664 -->10 videos
-                                                             <!-- /react-text --><span data-reactid="665">(Total 55 min)</span>
+                                                            <!-- react-text: 664 -->5 فایل
+                                                             <!-- /react-text --><span data-reactid="665">تعداد
+                                                             ساعات</span>
                                                          </span>
                                                          <span
-                                                                 data-reactid="666">, 8 readings</span><span
+                                                                 data-reactid="666">به مدت 7 روز</span><span
                                                               data-reactid="667"></span>
                                                       </span>
                                                             </div>
@@ -9580,7 +9566,7 @@
                                                     <div class="hidden-sm-down m-t-1 m-b-2" data-reactid="773">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="774">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="775">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="775">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="776">
                                                                     <div class="_473mf9o"
@@ -9634,7 +9620,7 @@
                                                     <div class="hidden-sm-up m-t-1" data-reactid="790">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="791">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="792">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="792">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="793">
                                                                     <div class="_473mf9o"
@@ -9664,7 +9650,7 @@
                                                     </div>
                                                     <div class="_1qfi0x77 m-b-2" data-reactid="800">
                                                         <div class="_1qfi0x77 p-y-1" data-reactid="801">
-                                                            <div class="m-r-1" data-reactid="802">
+                                                            <div class="m-l-1" data-reactid="802">
                                                                 <div class="_u2c01j" style="border-radius:50%;"
                                                                      data-reactid="803">
                                                                     <div class="_473mf9o"
@@ -9902,7 +9888,7 @@
                                                     <div class="hidden-sm-down m-t-1 m-b-2" data-reactid="916">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="917">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="918">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="918">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="919">
                                                                     <div class="_473mf9o"
@@ -9962,7 +9948,7 @@
                                                     <div class="hidden-sm-up m-t-1" data-reactid="933">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="934">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="935">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="935">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="936">
                                                                     <div class="_473mf9o"
@@ -9992,7 +9978,7 @@
                                                     </div>
                                                     <div class="_1qfi0x77 m-b-2" data-reactid="943">
                                                         <div class="_1qfi0x77 p-y-1" data-reactid="944">
-                                                            <div class="m-r-1" data-reactid="945">
+                                                            <div class="m-l-1" data-reactid="945">
                                                                 <div class="_u2c01j" style="border-radius:50%;"
                                                                      data-reactid="946">
                                                                     <div class="_473mf9o"
@@ -10223,7 +10209,7 @@
                                                     <div class="hidden-sm-down m-t-1 m-b-2" data-reactid="1043">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="1044">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="1045">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="1045">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="1046">
                                                                     <div class="_473mf9o"
@@ -10280,7 +10266,7 @@
                                                     <div class="hidden-sm-up m-t-1" data-reactid="1060">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="1061">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="1062">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="1062">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="1063">
                                                                     <div class="_473mf9o"
@@ -10310,7 +10296,7 @@
                                                     </div>
                                                     <div class="_1qfi0x77 m-b-2" data-reactid="1070">
                                                         <div class="_1qfi0x77 p-y-1" data-reactid="1071">
-                                                            <div class="m-r-1" data-reactid="1072">
+                                                            <div class="m-l-1" data-reactid="1072">
                                                                 <div class="_u2c01j" style="border-radius:50%;"
                                                                      data-reactid="1073">
                                                                     <div class="_473mf9o"
@@ -10542,7 +10528,7 @@
                                                     <div class="hidden-sm-down m-t-1 m-b-2" data-reactid="1167">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="1168">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="1169">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="1169">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="1170">
                                                                     <div class="_473mf9o"
@@ -10605,7 +10591,7 @@
                                                     <div class="hidden-sm-up m-t-1" data-reactid="1184">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="1185">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="1186">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="1186">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="1187">
                                                                     <div class="_473mf9o"
@@ -10635,7 +10621,7 @@
                                                     </div>
                                                     <div class="_1qfi0x77 m-b-2" data-reactid="1194">
                                                         <div class="_1qfi0x77 p-y-1" data-reactid="1195">
-                                                            <div class="m-r-1" data-reactid="1196">
+                                                            <div class="m-l-1" data-reactid="1196">
                                                                 <div class="_u2c01j" style="border-radius:50%;"
                                                                      data-reactid="1197">
                                                                     <div class="_473mf9o"
@@ -10886,7 +10872,7 @@
                                                     <div class="hidden-sm-down m-t-1 m-b-2" data-reactid="1302">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="1303">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="1304">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="1304">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="1305">
                                                                     <div class="_473mf9o"
@@ -10952,7 +10938,7 @@
                                                     <div class="hidden-sm-up m-t-1" data-reactid="1319">
                                                         <div class="_1qfi0x77" data-test="duration-text-section"
                                                              data-reactid="1320">
-                                                            <div class="m-r-1" aria-hidden="true" data-reactid="1321">
+                                                            <div class="m-l-1" aria-hidden="true" data-reactid="1321">
                                                                 <div class="_eo0j7w" style="border-radius:50%;"
                                                                      data-reactid="1322">
                                                                     <div class="_473mf9o"
@@ -10982,7 +10968,7 @@
                                                     </div>
                                                     <div class="_1qfi0x77 m-b-2" data-reactid="1329">
                                                         <div class="_1qfi0x77 p-y-1" data-reactid="1330">
-                                                            <div class="m-r-1" data-reactid="1331">
+                                                            <div class="m-l-1" data-reactid="1331">
                                                                 <div class="_u2c01j" style="border-radius:50%;"
                                                                      data-reactid="1332">
                                                                     <div class="_473mf9o"
