--- a/Management of Fashion and Luxury Companies _ Coursera.html
+++ b/Management of Fashion and Luxury Companies _ Coursera.html
@@ -11388,7 +11388,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="rc-TopReviewsListItem__info">
-                                                            <span>by PM</span><span>Mar 1, 2017</span>
+                                                            <span>لورم</span>
                                                         </div>
                                                         <p class="rc-TopReviewsListItem__comment">What a great resource
                                                             for both Fashion and Business Students around the world. I
