--- a/Management of Fashion and Luxury Companies _ Coursera.html
+++ b/Management of Fashion and Luxury Companies _ Coursera.html
@@ -11839,8 +11839,9 @@
                                                               style="vertical-align: bottom;">Shareable on</span>
                                                     </div>
                                                     <div class="_y1d9czk" style="align-items: center;"><span
-                                                            class="m-y-1s font-sm text-xs-left text-primary"
-                                                            style="max-width: 430px;">You can share your Course Certificates in the Certifications section of your LinkedIn profile, on printed resumes, CVs, or other documents.</span>
+                                                            class="m-y-1s font-sm text-xs-right text-primary"
+                                                            style="max-width: 430px;">لورم ایپسوم متن ساختگی با تولید
+                                                        سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی </span>
                                                     </div>
                                                 </div>
                                             </div>
